--- a/dockerfile_v0.1
+++ b/dockerfile_v0.1
@@ -58,11 +58,13 @@ COPY ./app /app
 RUN cd $SYNTAXNETDIR/modles/syntaxnet/work \
     && pip install -r /app/requirements.txt
 
-COPY custom_parse.sh $SYNTAXNETDIR/models/syntaxnet/work
+RUN mkdir /models
+
+COPY custom_parse.sh $SYNTAXNETDIR/models/syntaxnet/syntaxnet
 RUN chmod 777 $SYNTAXNETDIR/models/syntaxnet/syntaxnet/custom_parse.sh
 EXPOSE 80 443 9000
 
-VOLUME ["/app/config","$SYNTAXNETDIR/models/syntaxnet/work"]
+VOLUME ["/app/config","/models"]
 WORKDIR /app
 RUN export LANG=C.UTF-8
 CMD ["/usr/bin/supervisord"]
