--- a/dockerfile_v0.1
+++ b/dockerfile_v0.1
@@ -55,14 +55,14 @@ COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY nginx.conf /etc/nginx/conf.d/
 COPY ./app /app
 
-RUN cd $SYNTAXNETDIR/models/syntaxnet/work \
-    && pip install -r /app/requirements.txt
+RUN pip install -r /app/requirements.txt
+RUN mkdir /models
 
-COPY custom_parse.sh $SYNTAXNETDIR/models/syntaxnet/syntaxnet
-RUN chmod 777 $SYNTAXNETDIR/models/syntaxnet/syntaxnet/custom_parse.sh
+COPY custom_parse.sh $SYNTAXNETDIR/models/syntaxnet/work
+RUN chmod 777 $SYNTAXNETDIR/models/syntaxnet/work/custom_parse.sh
 EXPOSE 80 443 9000
 
-VOLUME ["/app/config","$SYNTAXNETDIR/models"]
+VOLUME ["/app/config","/models"]
 WORKDIR /app
 RUN export LANG=C.UTF-8
 CMD ["/usr/bin/supervisord"]
